adicionando rota para contagem de pontos por usuario e por estabelecimento
