# src/modules/pontuacoes/dtos/ICountPontuacoesByUserAndByEstabelecimentoDTO.ts
@@ -1,0 +1,6 @@
+interface ICountPontuacoesByUserAndByEstabelecimentoDTO {
+  user_id: number;
+  estabelecimento_id: number;
+}
+
+export { ICountPontuacoesByUserAndByEstabelecimentoDTO };
